infra/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: trenches
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
    - name: http
      port: 3000
      targetPort: http
